--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body {
     min-height: 100vh;
     background-color: #f4f4f4;
     margin: 0;
+    background-image: url('backimage.png'); 
+    background-repeat: no-repeat; 
+    background-size: cover;
+    background-position: center center; 
 }
 
 .container {
